Add community page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -80,3 +80,7 @@
 @import 'partials/customers-case-studies';
 @import 'partials/customers-vector-space-wall';
 @import 'partials/customers-get-contacted';
+@import 'partials/community-hero';
+@import 'partials/community-features';
+@import 'partials/community-testimonials';
+@import 'partials/community-get-contacted';
