--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_not-found.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_not-found.scss
@@ -6,6 +6,7 @@
   padding-top: rem(130);
   padding-bottom: $spacer * 5;
   text-align: center;
+  background: url('/img/stars-pattern.png') $neutral-10;
 
   &__image {
     display: none;
