--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-articles-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-articles-hero.scss
@@ -4,6 +4,7 @@
   position: relative;
   padding-top: $spacer * 2.5;
   padding-bottom: $spacer * 5;
+  background: url('/img/stars-pattern.png') $neutral-10;
   text-align: center;
   overflow: hidden;
   z-index: 1;
