--- a/qdrant-landing/themes/qdrant-2024/layouts/data-analysis/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/data-analysis/list.html
@@ -1,12 +1,8 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
+    {{ partial "site-header" . }}
     {{ with (.Site.GetPage "/data-analysis/data-analysis-hero") }}
       {{ partial "use-cases-vector-hero" . }}
     {{ end }}
-  </header>
 
   {{ partial "data-analysis-anomaly-detection" . }}
 
