--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/list.html
@@ -1,10 +1,6 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
-    {{ partial "enterprise-solutions-hero" . }}
-  </header>
+  {{ partial "site-header" . }}
+  {{ partial "enterprise-solutions-hero" . }}
 
   {{ partial "enterprise-solutions-use-cases" . }}
   {{ partial "testimonial" . }}
