--- a/qdrant-landing/themes/qdrant-2024/layouts/private-cloud/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/private-cloud/list.html
@@ -1,9 +1,6 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
-  </header>
+
+  {{ partial "site-header" . }}
 
   {{ partial "private-cloud-hero" . }}
   {{ partial "private-cloud-about" . }}
