--- a/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
@@ -1,4 +1,5 @@
 @use 'sass:math';
+@use 'helpers/functions' as *;
 @import 'satoshi-font';
 @import 'bootstrap-custom';
 
@@ -20,6 +21,26 @@ html {
   scrollbar-width: thin;
   scrollbar-color: $neutral-50 $neutral-20;
 }
+
+.scrolled {
+  .site-header {
+    min-height: rem(140);
+    z-index: 3;
+  }
+  .main-menu {
+    position: fixed;
+    top: -24px;
+    left: 0;
+    right: 0;
+    background: $neutral-10;
+    padding-bottom: $spacer * 0.5;
+  }
+
+  .top-banner {
+    display: none;
+  }
+}
+
 @import 'components';
 @import 'syntax-highlight';
 @import 'mathjax';
@@ -28,6 +49,7 @@ html {
 @import 'partials/top-banner';
 @import 'partials/menu-mobile';
 @import 'partials/menu';
+@import 'partials/site-header';
 @import 'partials/link';
 @import 'partials/hubspot-form';
 @import 'partials/breadcrumbs';
