--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-hero.scss
@@ -4,6 +4,7 @@
   padding-top: $spacer * 2.5;
   padding-bottom: $spacer * 4;
   text-align: center;
+  background: url('/img/stars-pattern.png') $neutral-10;
 
   &__title {
     font-size: $spacer * 2.5;
