--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_menu.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_menu.scss
@@ -163,6 +163,7 @@
     padding-bottom: $spacer * 2;
     padding-left: $spacer * 1.5;
     padding-right: $spacer * 1.5;
+    //margin-top: $spacer * 1.5;
 
     &__links {
       display: flex;
