--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-cloud-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-cloud-hero.scss
@@ -6,6 +6,7 @@
   position: relative;
   overflow: hidden;
   text-align: center;
+  background: url('/img/stars-pattern.png') $neutral-10;
 
   &__title {
     font-size: $spacer * 2.5;
