--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-vector-database-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-vector-database-hero.scss
@@ -3,6 +3,7 @@
 .qdrant-vector-database-hero {
   padding-top: $spacer * 2.5;
   text-align: center;
+  background: url('/img/stars-pattern.png') $neutral-10;
 
   &__title {
     font-size: $spacer * 2.5;
