--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_use-cases-vector-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_use-cases-vector-hero.scss
@@ -1,6 +1,7 @@
 @use '../helpers/functions' as *;
 
 .use-cases-vector-hero {
+  background: url('/img/stars-pattern.png') $neutral-10;
   padding-top: $spacer * 2.5;
   padding-bottom: $spacer * 4;
   text-align: center;
