--- a/qdrant-landing/themes/qdrant-2024/layouts/_default/single.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/_default/single.html
@@ -1,9 +1,5 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
-  </header>
+  {{ partial "site-header" . }}
 
   <div class="container my-5">
     <div class="qdrant-post">
