--- a/qdrant-landing/themes/qdrant-2024/layouts/benchmarks/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/benchmarks/list.html
@@ -1,10 +1,6 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
-    {{ partial "qdrant-articles-hero" . }}
-  </header>
+  {{ partial "site-header" . }}
+  {{ partial "qdrant-articles-hero" . }}
 
   <div class="container my-5">
     {{ range $i,$p := where .Data.Pages "Section" "benchmarks" }}
