--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -1,12 +1,8 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
+  {{ partial "site-header" . }}
+  {{ partial "hero" . }}
+  {{ partial "customers" . }}
 
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
-    {{ partial "hero" . }}
-    {{ partial "customers" . }}
-  </header>
   {{ partial "core-features" . }}
   {{ partial "customer-stories" . }}
   {{ partial "integrations" . }}
