--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/list.html
@@ -1,10 +1,6 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
-    {{ partial "qdrant-cloud-hero" . }}
-  </header>
+  {{ partial "site-header" . }}
+  {{ partial "qdrant-cloud-hero" . }}
 
   {{ with (.Site.GetPage "/headless/get-started-small-database") }}
     {{ partial "get-started-small" (dict "context" . "class" "get-started-small-database") }}
