--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_site-header.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_site-header.scss
@@ -1,3 +1,5 @@
 .site-header {
-  background: linear-gradient(180deg, #090d19, rgba(9, 13, 25, 0)), url('/img/stars-pattern.png') $neutral-10;
+  background:
+    linear-gradient(180deg, #090d19, rgba(9, 13, 25, 0)),
+    url('/img/stars-pattern.png') $neutral-10;
 }
