--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/js.html
@@ -18,34 +18,33 @@
 </script>
 {{ end }}
 
+
 <script>
+  // on all pages:
+  // add class 'scrolled' to body when user scrolls down more than top banner height + menu offset
   const body = document.querySelector('body');
   const header = document.querySelector('.site-header');
   const topBannerHeight = document.querySelector('.top-banner')?.offsetHeight ?? 0;
-  const mainMenu = document.querySelector('.main-menu');
-  const mainMenuHeight = mainMenu?.offsetHeight ?? 0;
-  const mainMenuMarginTop = parseInt(window.getComputedStyle(mainMenu).marginTop, 10);
+  const mainMenuHeight = document.querySelector('.main-menu')?.offsetHeight ?? 0;
+  const menuOffset = 24; // 24px is a PART of padding-top which we want to scroll over
 
   // predict in which direction user is scrolling
-    let scrollDirection = 'down';
-    let lastScrollTop = 0;
-    window.addEventListener('scroll', function () {
-      const st = window.pageYOffset || document.documentElement.scrollTop;
-      if (st > lastScrollTop) {
-        scrollDirection = 'down';
-        console.log('down');
-        if (window.scrollY > topBannerHeight + 24) {
-          body.classList.add('scrolled');
-        }
-      } else {
-        scrollDirection = 'up';
-        console.log('up');
-        if (window.scrollY <= mainMenuHeight) {
-          body.classList.remove('scrolled');
-        }
+  let lastScrollTop = 0;
+  window.addEventListener('scroll', function () {
+    const st = window.pageYOffset || document.documentElement.scrollTop;
+    if (st > lastScrollTop) {
+      // scroll down
+      if (window.scrollY > topBannerHeight + menuOffset) {
+        body.classList.add('scrolled');
       }
-      lastScrollTop = st <= 0 ? 0 : st;
-    });
+    } else {
+      // scroll up
+      if (window.scrollY <= mainMenuHeight) {
+        body.classList.remove('scrolled');
+      }
+    }
+    lastScrollTop = st <= 0 ? 0 : st;
+  });
 </script>
 
 {{ if .IsHome }}
