--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
@@ -16,6 +16,11 @@
               </a>
             {{ end }}
           </div>
+          <div class="d-flex gap-2 flex-wrap mb-5">
+            {{ range .Params.bages }}
+            <a href="{{ .url }}" target="_blank"><img src="{{ .src }}" alt="{{ .alt }}" /></a>
+            {{ end }}
+          </div>
         </section>
         <nav class="col-12  col-md-7 col-lg-8">
           <div class="row gx-lg-5 gy-5 gy-md-6">
