--- a/qdrant-landing/themes/qdrant-2024/layouts/data-analysis/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/data-analysis/list.html
@@ -6,9 +6,11 @@
 
   {{ partial "data-analysis-anomaly-detection" . }}
 
+
   <!-- {{ with (.Site.GetPage "/headless/get-started-small-rocket") }}
     {{ partial "get-started-small" (dict "context" . "class" "use-cases-vector-get-started") }}
-  {{ end }} -->
+  {{ end }}
+   -->
 
   {{ partial "get-started" . }}
 {{ end }}
