--- a/qdrant-landing/themes/qdrant-2024/layouts/recommendations/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/recommendations/list.html
@@ -12,9 +12,11 @@
     {{ partial "use-cases-vector-cases" . }}
   {{ end }}
 
+
   <!-- {{ with (.Site.GetPage "/headless/get-started-small-rocket") }}
     {{ partial "get-started-small" (dict "context" . "class" "use-cases-vector-get-started") }}
-  {{ end }} -->
+  {{ end }}
+   -->
 
   {{ partial "get-started" . }}
 {{ end }}
