--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -65,6 +65,16 @@
       window.initQdrantSearch({searchApiUrl: 'https://search.qdrant.tech/api/search', section: "blog"});
     }
   });
+
+  document.addEventListener('keydown', function(event) {
+     if ((event.metaKey || event.ctrlKey) && event.key === 'k') {
+         event.preventDefault();
+
+         let searchButton = document.querySelector('[data-target="#searchModal"]');
+
+         if (searchButton) searchButton?.click();
+     }
+ });
 </script>
 
 
