--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/js.html
@@ -123,3 +123,17 @@
     });
   </script>
 {{ end }}
+
+{{ if or (eq .Section "blog") (eq .Section "documentation") }}
+<script>
+  document.addEventListener('keydown', function(event) {
+    if ((event.metaKey || event.ctrlKey) && event.key === 'k') {
+        event.preventDefault();
+
+        let searchButton = document.querySelector('[data-target="#searchModal"]');
+
+        if (searchButton) searchButton?.click();
+    }
+  });
+</script>
+{{ end }}
