--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
@@ -20,7 +20,7 @@
                   {{ partial "preview-image" (dict "context" . "default_file_name" "preview.jpg" "preview_file" .Params.small_preview_image) }}
                 </div>
               {{ end }}
-              <h6 class="post-title">{{ .Params.title }}</h6>
+              <h3 class="post-title">{{ if .Params.h1 }}{{ .Params.h1 }}{{ else }}{{ .Params.title }}{{ end }}</h3>
               <p class="post-description">{{ .Params.description }}</p>
               <div class="post-about">
                 <p>{{ .Params.author }}</p>
