fix docs sidebar arrows in safari

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docs-menu.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docs-menu.scss
@@ -95,6 +95,10 @@
         display: block;
         position: relative;
         margin-bottom: $spacer * 0.5;
+        // hide native details marker
+        &::-webkit-details-marker {
+          display: none;
+        }
 
         a {
           display: flex;
