Add Customers page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -75,3 +75,8 @@
 @import 'partials/partners-get-contacted';
 @import 'partials/partners-get-started';
 @import 'partials/testimonial-light';
+@import 'partials/customers-testimonial';
+@import 'partials/customers-hero';
+@import 'partials/customers-case-studies';
+@import 'partials/customers-vector-space-wall';
+@import 'partials/customers-get-contacted';
