incorparated site-header partial

--- a/qdrant-landing/themes/qdrant-2024/layouts/customers/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/customers/list.html
@@ -1,9 +1,5 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
-  </header>
+  {{ partial "site-header" . }}
 
   {{ partial "customers-hero" . }}
 
