--- a/qdrant-landing/themes/qdrant-2024/layouts/partners/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partners/list.html
@@ -1,10 +1,6 @@
 {{ define "main" }}
-  <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
-    {{ partial "partners-hero" . }}
-  </header>
+{{ partial "site-header" . }}
+{{ partial "partners-hero" . }}
 
   {{ partial "partners-cloud" . }}
 
