--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_partners-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_partners-hero.scss
@@ -6,6 +6,7 @@
   padding-bottom: $spacer * 4;
   text-align: center;
   overflow: hidden;
+  background: url('/img/stars-pattern.png') $neutral-10;
 
   &__title {
     font-size: $spacer * 2.5;
