body's scroll over the mobile menu fix

--- a/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
@@ -43,6 +43,12 @@ html {
   }
 }
 
+body {
+  &.no-scroll {
+    overflow: hidden;
+  }
+}
+
 @import 'components';
 @import 'syntax-highlight';
 @import 'mathjax';
